@@ -171,6 +171,7 @@ void UpdateVolList(void);
 void VolListUpdateStatusField(volume_processing_job *job);
 void VolListRefreshItem(volume_processing_job *job);
 void ReleaseVolList(void);
+void SelectAllDrives(void);
 
 void InitMap(void);
 void RedrawMap(volume_processing_job *job, int map_refill_required);
