@@ -150,6 +150,7 @@ BEGIN
 	VK_F2,         IDM_BEST_PRACTICE,           VIRTKEY, NOINVERT
 	VK_F3,         IDM_FAQ,                     VIRTKEY, NOINVERT
 	VK_F4,         IDM_ABOUT,                   VIRTKEY, NOINVERT
+	"A",           IDM_SELECT_ALL,              VIRTKEY, CONTROL, NOINVERT
 END
 
 /* manifests for all targets produces make-manifests.cmd script */
